[package]
name = "distribute_candies"
version = "0.1.0"
authors = ["davidivad96 <davidivad96@gmail.com>"]
edition = "2018"

[[bin]]
name = "distribute_candies"
path = "distribute_candies.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
