[package]
name = "number_of_steps_to_reduce_a_number_to_zero"
version = "0.1.0"
authors = ["davidivad96 <davidivad96@gmail.com>"]
edition = "2018"

[[bin]]
name = "number_of_steps_to_reduce_a_number_to_zero"
path = "number_of_steps_to_reduce_a_number_to_zero.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
