[package]
name = "palindrome_number"
version = "0.1.0"
authors = ["davidivad96 <davidivad96@gmail.com>"]
edition = "2018"

[[bin]]
name = "palindrome_number"
path = "palindrome_number.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
