[package]
name = "running_sum_of_1d_array"
version = "0.1.0"
authors = ["davidivad96 <davidivad96@gmail.com>"]
edition = "2018"

[[bin]]
name = "running_sum_of_1d_array"
path = "running_sum_of_1d_array.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
