[package]
name = "broken_calculator"
version = "0.1.0"
authors = ["davidivad96 <davidivad96@gmail.com>"]
edition = "2018"

[[bin]]
name = "broken_calculator"
path = "broken_calculator.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
