[package]
name = "container_with_most_water"
version = "0.1.0"
authors = ["davidivad96 <davidivad96@gmail.com>"]
edition = "2018"

[[bin]]
name = "container_with_most_water"
path = "container_with_most_water.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
