[package]
name = "shortest_unsorted_continuous_subarray"
version = "0.1.0"
authors = ["davidivad96 <davidivad96@gmail.com>"]
edition = "2018"

[[bin]]
name = "shortest_unsorted_continuous_subarray"
path = "shortest_unsorted_continuous_subarray.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
